--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,13 @@
-bind-key C-a setw synchronize-panes
-bind-key C-b copy-mode -u
+# my own tux config + few things stolen from here: https://github.com/gpakosz/.tmux
+
+bind-key C-a setw synchronize-panes   # type on all panes at once
+bind-key C-b copy-mode -u             # added a possibility to use copy mode on macbooks
+set -g history-limit 5000             # boost history
+
+# reload configuration
+bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+
+setw -g automatic-rename on           # rename window to reflect current program
+set -g renumber-windows on            # renumber windows when a window is closed
+set -g set-titles on                  # set terminal title
+set -g status-interval 10             # redraw status line every 10 seconds
